--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="./assets/css/style.css">
-    <title>website</title>
+    <title>Horiseon marketing agency home page</title>
 </head>
 
 <body>
@@ -24,9 +24,10 @@
             </ul>
         </div>
     </div>
+    <!-- hero div needs alt text  -->
     <div class="hero"></div>
     <div class="content">
-        <div class="search-engine-optimization">
+        <div id= "search-engine-optimization" class="search-engine-optimization">
             <img src="./assets/images/search-engine-optimization.jpg" class="float-left" />
             <h2>Search Engine Optimization</h2>
             <p>
@@ -48,6 +49,7 @@
             </p>
         </div>
     </div>
+    <!-- this div should be an aside -->
     <div class="benefits">
         <div class="benefit-lead">
             <h3>Lead Generation</h3>
