--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         </div>
     </div>
     <!-- hero div needs alt text and should probably be an id -->
-    <div class="hero"> </div>
+    <div class="hero" alt=""> </div>
     <div class="content">
         <div id= "search-engine-optimization" class="search-engine-optimization">
             <img src="./assets/images/search-engine-optimization.jpg" class="float-left" alt="Desk with a notebook outlining search engine optimization." />
